$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Changed util.collections.Map interface to ensure array access works.
  Any implementation must now adhere to http://de3.php.net/arrayaccess
  (friebe)

RFCs
~~~~
- Implemented RFC #0183 - lang.ResourceProvider
  (kiesel)

Features
~~~~~~~~
- Enabled discovery of port used in bind() when setting to port to 0 -
  - which indicates to use any free port - in peer.ServerSocket
  http://news.xp-framework.net/article/343/2010/02/01/ 
  (friebe)

Version 5.7.7, released 2010-01-26
----------------------------------
SVN version: 14139

Heads up!
~~~~~~~~~
- Deprecated unittest.TestCase::assertClass() and assertSubclass() -
  replaced by new method assertInstanceOf().
  (friebe)
- Changed FTP_ASCII / FTP_BINARY constants in peer.ftp package to class
  constants FtpTransfer::ASCII and FtpTransfer::BINARY.
  http://news.xp-framework.net/article/334/2009/12/28/
  (friebe)

Features
~~~~~~~~
- Added getOptions() and getSelectedOptions() to unittest.web.SelectField 
  (friebe)
- Added support for cookies to web test API
  (friebe)
- Added new security.checksum.MessageDigest API supporting incrementally
  creating checksums (md5, sha1, crc32, whirlpool, adler32 and more)
  (friebe)
- Added new lang.Runtime::newInstance() method
  (friebe)
- Added member "in" to command line classes to read from standard input
  (friebe, srogin)
- Added compressing input and decompressing output streams to io.streams:
  deflate / inflate, gzcompress / gzdecompress, bz2compress / bz2decompress
  http://news.xp-framework.net/article/335/2010/01/06/
  (friebe)
- Added io.streams.StreamTransfer class to copy one stream to another
  (friebe)
- Improved performance of reflection on class members (fields, methods)
  (friebe)
- Changed util.log.Logger::configure() to refrain from using global
  and deprecated LOGGER_FLAG_* constants (soon to be removed).
  (friebe)